--- a/java/middleware/registry-middleware/authorization/pom.xml
+++ b/java/middleware/registry-middleware/authorization/pom.xml
@@ -100,7 +100,7 @@
 
     <build>
         <plugins>
-            <plugin>
+            <!-- <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>${jacoco.version}</version>
@@ -125,10 +125,10 @@
                             <goal>report</goal>
                         </goals>
                         <configuration>
-                            <!-- Sets the path to the file which contains the execution data. -->
+                            Sets the path to the file which contains the execution data.
 
                             <dataFile>target/jacoco.exec</dataFile>
-                            <!-- Sets the output directory for the code coverage report. -->
+                            Sets the output directory for the code coverage report.
                             <outputDirectory>target/jacoco-ut</outputDirectory>
                         </configuration>
                     </execution>
@@ -146,9 +146,9 @@
                     <includes>
                         <include>${runSuite}</include>
                     </includes>
-                    <forkCount>0</forkCount>
+                    <forkCount>1</forkCount>
                 </configuration>
-            </plugin>
+            </plugin> -->
         </plugins>
     </build>
 </project>
